Additional Upgrades (Reset Password and E-mail Authentication)

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb+srv://finher:finherproject@atlascluster.dcadnlk.mongodb.net/?retryWrites=true&w=majority&appName=AtlasCluster
+EMAIL_USER=projects5423@gmail.com
+EMAIL_PASS=yhqk shez ycnb oacw
+
