--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0"
+    "mongoose": "^7.5.0",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
